# AI-BE

./: .gitattributes  .gitignore  .renderignore  README.md  main.py  pyproject.toml  requirements.txt  test_stt.py
agents/: calm_agent.py  context_agent.py  emotion_smoothing.py  guide_agent.py  intent_agent.py
routers/: process_audio.py
server/: main.py  models.py  requirements.txt  schemas.py
server/agents/: calm_agent.py  context_agent.py  emotion_agent.py  guide_agent.py  policy_rag.py  solar_client.py  solar_emotion_agent.py  stt_agent.py
server/kobert_emotion_final/: .gitigonore
server/kobert_emotion_final/agents/: emotion_agent.py
server/models/kobert_emotion_final/agents/: emotion_agent.py
server/policies/: exchange_policy_summary.txt  refund_policy_summary.txt  shipping_policy_summary.txt
server/routers/: process_audio.py
